--- a/vault.html
+++ b/vault.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vault</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="vault.css" />
   </head>
+
+  <!-- INTRO -->
   <body>
-    <h1>The Vault</h1>
-    <p>Good luck getting in...</p>
+    <!-- link -->
+    <a id="message" href="">Good luck getting in...</a>
+
+    <h1 id="title">The Vault</h1>
   </body>
 </html>
