--- a/vault.html
+++ b/vault.html
@@ -9,10 +9,21 @@
   </head>
 
   <!-- INTRO -->
-  <body>
+  <body class="front">
     <!-- link -->
-    <a id="message" href="">Good luck getting in...</a>
-
+    <a id="message" style="color: rgba(3, 2, 0, 0.888)" href="message.html"
+      >secrect message</a
+    >
     <h1 id="title">The Vault</h1>
+
+    <!-- BUTTONS -->
+        <!-- intro -->
+    <h2 id="click">Click the box with the correct passcode:</h2>
+        <!-- button1 -->
+    <button class="button1">03 18 19</button1>
+        <!-- button2 -->
+    <button class="button2">04 06 20</button2>
+        <!-- button3 -->
+    <button class="button3">10 40 39</button3>
   </body>
 </html>
