--- a/vault.html
+++ b/vault.html
@@ -11,10 +11,10 @@
   <!-- INTRO -->
   <body class="front">
     <!-- link -->
-    <a id="message" style="color: rgba(3, 2, 0, 0.888)" href="message.html"
+    <a id="message" style="color: rgba(255, 235, 218, 0.619)" href="message.html"
       >secrect message</a
     >
-    <h1 id="title">The Vault</h1>
+    <h1 id="title" style="color: rgb(50, 14, 0);">The Vault</h1>
 
     <!-- BUTTONS -->
         <!-- intro -->
