--- a/message.html
+++ b/message.html
@@ -6,5 +6,9 @@
     <title>secret message</title>
     <link rel="stylesheet" href="vault.css" />
   </head>
-  <body class="mess"></body>
+  <body class="mess">
+    <h2 id="sell" style="color: rgba(69, 252, 97, 0.736)">
+      You have found the hidden passageway...
+    </h2>
+  </body>
 </html>
