--- a/vault.html
+++ b/vault.html
@@ -12,13 +12,13 @@
   <body class="front">
     <!-- link -->
     <a id="message" style="color: rgba(255, 235, 218, 0.619)" href="message.html"
-      >secrect message</a
+      >secrect passage</a
     >
     <h1 id="title" style="color: rgb(50, 14, 0);">The Vault</h1>
 
     <!-- BUTTONS -->
         <!-- intro -->
-    <h2 id="click">Click the box with the correct passcode:</h2>
+    <h2 id="click" style="color: rgb(71, 41, 0);">Click the box with the correct passcode:</h2>
         <!-- button1 -->
     <button class="button1">03 18 19</button1>
         <!-- button2 -->
