--- a/message.html
+++ b/message.html
@@ -6,9 +6,16 @@
     <title>secret message</title>
     <link rel="stylesheet" href="vault.css" />
   </head>
+  <!-- message -->
   <body class="mess">
     <h2 id="sell" style="color: rgba(69, 252, 97, 0.736)">
       You have found the hidden passageway...
     </h2>
   </body>
+  <!-- side challenge -->
+  <body id="side">
+    <p style="color: rgb(0, 29, 1);">it calls to you</p>
+  </body>
+  <!-- cheat button -->
+  <button class="buttons" style="color: rgba(255, 255, 255, 0.329);">click here for money</button1>
 </html>
