--- a/vault.html
+++ b/vault.html
@@ -11,19 +11,30 @@
   <!-- INTRO -->
   <body class="front">
     <!-- link -->
-    <a id="message" style="color: rgba(255, 235, 218, 0.619)" href="message.html"
+    <a
+      id="message"
+      style="color: rgba(255, 235, 218, 0.619)"
+      href="message.html"
       >secrect passage</a
     >
-    <h1 id="title" style="color: rgb(50, 14, 0);">The Vault</h1>
+    <h1 id="title" style="color: rgba(187, 53, 0, 0.67)">The Vault</h1>
 
     <!-- BUTTONS -->
-        <!-- intro -->
-    <h2 id="click" style="color: rgb(71, 41, 0);">Click the box with the correct passcode:</h2>
-        <!-- button1 -->
-    <button class="button1">03 18 19</button1>
-        <!-- button2 -->
-    <button class="button2">04 06 20</button2>
-        <!-- button3 -->
-    <button class="button3">10 40 39</button3>
+    <!-- intro -->
+    <h2 id="click" style="color: rgb(86, 45, 0)">
+      Click the box with the correct passcode:
+    </h2>
+    <!-- button1 -->
+    <a href="message.html" style="text-decoration: none" class="button1"
+      >03 18 19</a
+    >
+    <!-- button2 -->
+    <a href="message.html" style="text-decoration: none" class="button2"
+      >04 06 20</a
+    >
+    <!-- button3 -->
+    <a href="message.html" style="text-decoration: none" class="button3"
+      >10 40 39</a
+    >
   </body>
 </html>
